# student-manager

./: .env.example  .gitignore  AGENTS.md  backup.sh  project.config.json  project.private.config.json
.context/: .gitattributes  SUMMARY.md  sync_meta.json  task_progress.md
backend/: config.py  database.py  main.py  pyproject.toml  pytest.ini
backend/middleware/: auth.py  rate_limit.py
backend/models/: class_model.py  homework_model.py  note_model.py  record_model.py  schedule_model.py  score_model.py  student_model.py  trace_model.py
backend/routers/: classes.py  dashboard.py  homework.py  notes.py  records.py  schedule.py  scores.py  students.py  traces.py
backend/schemas/: class_schema.py  common.py  homework_schema.py  note_schema.py  record_schema.py  schedule_schema.py  score_schema.py  student_schema.py  trace_schema.py
backend/services/: excel_parser.py
backend/tests/: conftest.py  test_classes.py  test_dashboard.py  test_homework.py  test_notes.py  test_records.py  test_schedule.py  test_scores.py  test_student_import.py  test_students.py  test_traces.py
cloudfunctions/api/: index.js  package.json
docs/: API_SPEC.md  DATA_MODEL.md  IMPLEMENTATION_PLAN.md  REQUIREMENT_TEMPLATE.md  SECURITY.md  SERVER_MIGRATION.md  VIBECODING_CHEATSHEET.md
miniprogram/: app.js  app.json  app.wxss  package.json
miniprogram/pages/add-record/: add-record.js  add-record.json  add-record.wxml  add-record.wxss
miniprogram/pages/exam-detail/: exam-detail.js  exam-detail.json  exam-detail.wxml  exam-detail.wxss
miniprogram/utils/: api.js
skills/: bugfix.md
(+67 files in other folders)
