[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.13.4",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.10",
    "uvicorn>=0.39.0",
]
